# cosmodoit

./: .gitignore  README.md  dodo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml
Matlab/: plot_remove_whitespace.m
midi_processing/: concatenateMidi.py  fixDoubleOnsets.py  midi_scrambler.py  segmentAudio.py
music_features/: MIDIToMIDIAlign.py  MIDIToMIDIAlign.sh  MusicXMLToMIDIAlign.sh  _tension_calculation.py  antescofo_importer  dodo.py  extract_features.py  get_alignment.py  get_beats.py  get_loudness.m  get_loudness.py  get_midiEvents.py  get_midi_events.py  get_music_features.m  get_noteTempo.py  get_onsetVelocity.py  get_onset_velocity.py  get_sustain.py  get_tempo.m  get_tempo.py  get_tension.py  ma_sone.m  ma_sone.py  tension_calculation.py  tension_template.json  util.py
music_features/templates/: pyproject.toml
music_features/test_audio/: Etude_25-9__Chopin_.musicxml
music_features/test_midi/: Chopin_Ballade_No._2_Piano_solo.mid
other_scripts/: clean_antescofo_txt_output.py  get_loudness.m  get_noteTempo.py  get_tempo.py  get_tensionXML.py  ma_sone.m  ma_test_create_wav.m
paper/: paper.bib  paper.md
redist/AlignmentTool/Code/: CMakeLists.txt
tests/: helpers.py  ma_test_create_wav.py  test_aligment.py  test_beats.py  test_loudness.py
tests/test_data/: Chopin_Ballade_No2_perf.mid  Fur_Elise_perf.mid
tests/test_data/old_output/: Etude 25-6, Rosenthal AA_loudness.csv  Etude_25-9__Chopin__Lhevinne_mono-L_loudness.csv  Fantasie Impromptu, Orloff AB_loudness.csv  Nocturne 9-3, Lhevinne AA_loudness.csv
(+14 files in other folders)
