cmake_minimum_required(VERSION 3.10)

# set the project name
project(ErrorDetection)

# add the executable
add_executable(ErrorDetection ErrorDetection_v190702.cpp)

# set the project name
project(RealignmentMOHMM)

# add the executable
add_executable(RealignmentMOHMM RealignmentMOHMM_v170427.cpp)

# set the project name
project(ScorePerfmMatcher)

# add the executable
add_executable(ScorePerfmMatcher ScorePerfmMatcher_v170101_2.cpp)

# set the project name
project(midi2pianoroll)

# add the executable
add_executable(midi2pianoroll midi2pianoroll_v170504.cpp)

# set the project name
project(MusicXMLToFmt3x)

# add the executable
add_executable(MusicXMLToFmt3x MusicXMLToFmt3x_v170104.cpp)

# set the project name
project(MusicXMLToHMM)

# add the executable
add_executable(MusicXMLToHMM MusicXMLToHMM_v170104.cpp)

# set the project name
project(SprToFmt3x)

# add the executable
add_executable(SprToFmt3x SprToFmt3x_v170225.cpp)

# set the project name
project(Fmt3xToHmm)

# add the executable
add_executable(Fmt3xToHmm Fmt3xToHmm_v170225.cpp)

# set the project name
project(MatchToCorresp)

# add the executable
add_executable(MatchToCorresp MatchToCorresp_v170918.cpp)

